@@ -14,6 +14,7 @@ class IO::Handle {
   use Sys::OS;
   
   # Fields
+  has fd : protected int;
   has autoflush : rw byte;
   has input_line_number : ro int;
   has opened : ro protected int;
